log
Thu 16 May 2024 12:07:38 AM UTC: 
 tests:  0|5
total_score: 0/70
0103027
Thu 16 May 2024 12:22:40 AM UTC: 
 sudoku.c | 40 +++++++++++++++++++++++++++-------------
 1 file changed, 27 insertions(+), 13 deletions(-)
 tests:  0|5
total_score: 0/70
8136508
Thu 16 May 2024 12:31:37 AM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|5
total_score: 0/70
0df5777
Thu 16 May 2024 12:34:46 AM UTC: 
 sudoku.c | 16 ----------------
 1 file changed, 16 deletions(-)
 tests:  0|5
total_score: 0/70
8ce6037
Thu 16 May 2024 12:38:58 AM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  2|4
total_score: 15/70
5c3b8c3
Thu 16 May 2024 12:42:35 AM UTC: 
 sudoku.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:94:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   94 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
1e35ff3
Thu 16 May 2024 12:42:46 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
c9abc2f
Thu 16 May 2024 12:46:39 AM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:83:21: error: ‘nodo’ undeclared (first use in this function)
   83 |        printf("%d ",nodo->sudo[i][j]);
      |                     ^~~~
sudoku.c:83:21: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:82:12: error: variable ‘j’ set but not used [-Werror=unused-but-set-variable]
   82 |        int j=3*(k%3) + (p%3) ;
      |            ^
sudoku.c:81:12: error: variable ‘i’ set but not used [-Werror=unused-but-set-variable]
   81 |        int i=3*(k/3) + (p/3) ;
      |            ^
cc1: all warnings being treated as errors
Compilation failed
01d1562
Thu 16 May 2024 12:47:01 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
bb3f41a
Thu 16 May 2024 12:49:51 AM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
b8242a0
Thu 16 May 2024 12:50:11 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d49481b
Thu 16 May 2024 12:50:24 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9f7e743
Thu 16 May 2024 12:56:21 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
9fe8156
Thu 16 May 2024 01:03:08 AM UTC: 
 sudoku.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  2|4
total_score: 15/70
6fbc0eb
Thu 16 May 2024 01:04:10 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
01132a2
Thu 16 May 2024 01:10:22 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
5e453ed
Thu 16 May 2024 02:57:34 AM UTC: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:66:26: error: ‘k’ undeclared (first use in this function)
   66 |             int i = 3 * (k / 3) + (p / 3);
      |                          ^
sudoku.c:66:26: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5fd61bc
Thu 16 May 2024 02:57:51 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
9bbd325
Thu 16 May 2024 02:58:08 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
da2c73a
Sat 18 May 2024 01:56:34 AM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
dc97467
Sat 18 May 2024 10:47:12 PM UTC: 
 sudoku.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
 tests:  2|4
total_score: 15/70
1b7c063
Sat 18 May 2024 11:02:12 PM UTC: 
 sudoku.c | 71 +++++++++++++++++++++++-----------------------------------------
 1 file changed, 25 insertions(+), 46 deletions(-)
 tests:  2|4
total_score: 15/70
fb82050
Sat 18 May 2024 11:03:12 PM UTC: 
 sudoku.c | 40 +++++++++++-----------------------------
 1 file changed, 11 insertions(+), 29 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:56:8: error: unused variable ‘numerosColumna’ [-Werror=unused-variable]
   56 |    int numerosColumna[10] = {0, 0, 0, 0, 0, 0, 0, 0, 0, 0};
      |        ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6abc4df
